# r2cn-mentor-link

./: .env  .gitignore  Cargo.toml  Dockerfile  pg-dockerfile
.github/workflows/: api-deploy.yml
api/: Cargo.toml
api/src/: confernece_router.rs  email.rs  email_route.rs  lib.rs  main.rs  mentor_router.rs  score_router.rs  student_router.rs  task_router.rs
api/src/model/: email.rs  mentor.rs  mod.rs  score.rs  student.rs  task.rs
api/templates/: monthly_points_summary.html  score_count_email.html  task_assigned.html  task_completed_points.html  task_failed.html
api/templates/html/: monthly_points_summary.html  task_assigned.html
api/templates/mjml/: monthly_points_summary.mjml  task_assigned.mjml  (+2 more)
common/: Cargo.toml
common/src/: date.rs  errors.rs  lib.rs  model.rs
entity/: Cargo.toml
entity/src/: conference.rs  extend.rs  huawei_meeting.rs  mentor.rs  mod.rs  monthly_score.rs  prelude.rs  score.rs  sea_orm_active_enums.rs  student.rs  task.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20241210_082543_huawei_meeting.rs  m20241212_090613_conference.rs  m20250103_031128_task.rs  m20250114_074736_monthly_score.rs  m20250114_074736_score.rs  m20250124_090613_conference.rs  m20250212_084656_create_student.rs  m20250222_082628_alter_task.rs  m20251226_023303_create_mentor.rs
postgres/: Dockerfile
service/: Cargo.toml
service/src/: lib.rs
service/src/model/: score.rs
service/src/ospp/: mod.rs
service/src/storage/: conference_stg.rs  huaweimeeting_stg.rs  mentor_stg.rs  mod.rs  score_stg.rs  student_stg.rs  task_stg.rs
(+2 files in other folders)
